# QBioCodeUI

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-base.txt  requirements.txt  setup.py
apps/qprofiler/: qprofiler.py  qprofiler_batchmode.py
apps/qprofiler/configs/: config.yaml
apps/sage/: sage.py
docs/source/: api_overview.rst  apps.rst  background.md  conf.py  index.rst  installation.md  tutorials.md
docs/source/_static/: custom.css
docs/source/api/: modules.rst  qbiocode.data_generation.rst  qbiocode.embeddings.rst  qbiocode.evaluation.rst  qbiocode.learning.rst  qbiocode.rst  qbiocode.utils.rst  qbiocode.visualization.rst
docs/source/apps/: config.md  profiler.rst  sage.rst
docs/source/tutorials/: PQK - OV.ipynb
docs/source/tutorials/Artificial_data_generation/: example_data_generation.ipynb
docs/source/tutorials/QProfiler/: ModelResults.csv  compiled_raw_data_evaluations.csv  example_qprofiler.ipynb  results.pkl
docs/source/tutorials/QProfiler/configs/: config.yaml
docs/source/tutorials/QProfiler/performance_summary_and_spearman_correlation_plots/: tutorial_data_best_across_split.csv  tutorial_data_best_permodel_summary.csv
docs/source/tutorials/QSage/: qsage.ipynb
frontend/backend/: requirements.txt  run.py
frontend/backend/app/: config.py  main.py  qbiocode_loader.py
frontend/backend/app/models/: schemas.py
frontend/backend/app/routers/: datasets.py  embeddings.py  evaluation.py  generation.py  jobs.py  models.py  profiler.py  sage.py
frontend/backend/app/services/: dataset_service.py  job_manager.py
frontend/web/: package-lock.json  package.json
frontend/web/src/: App.tsx
frontend/web/src/api/: client.ts
frontend/web/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/web/src/components/shared/: StatusBadge.tsx
frontend/web/src/hooks/: useWebSocket.ts
frontend/web/src/pages/: ComplexityEvaluation.tsx  Dashboard.tsx  DataGeneration.tsx  DatasetManager.tsx  Embeddings.tsx  JobMonitor.tsx  ModelTraining.tsx  QProfiler.tsx  QSage.tsx  QuantumSettings.tsx
frontend/web/src/types/: index.ts
qbiocode/: __init__.py
qbiocode/data_generation/: __init__.py  generator.py  make_circles.py  make_class.py  make_moons.py  make_s_curve.py  make_spheres.py  make_spirals.py  make_swiss_roll.py
qbiocode/embeddings/: __init__.py
qbiocode/evaluation/: __init__.py  model_run.py
qbiocode/learning/: __init__.py  compute_dt.py  compute_lr.py  compute_mlp.py  compute_nb.py  compute_pqk.py  compute_qsvc.py  compute_rf.py  compute_svc.py  compute_xgb.py
qbiocode/utils/: __init__.py  find_duplicates.py  find_string.py  generate_qml_configs.py  helper_fn.py  qc_winner_finder.py
qbiocode/visualization/: __init__.py  visualize_correlation.py
tutorial/: PQK - OV.ipynb
tutorial/Artificial_data_generation/: example_data_generation.ipynb
tutorial/QProfiler/: RawDataEvaluation.csv  compiled_results.csv  example_qprofiler.ipynb
tutorial/QProfiler/configs/: config.yaml
tutorial/QSage/: qsage.ipynb
tutorial/Qauntum_Projection_Learning/: QPL_example.ipynb
tutorial/Qauntum_Projection_Learning/configs/: qpl.yaml  rf.yaml  xgb.yaml
tutorial/Quantum_Projection_Learning/: QPL_example.ipynb
